# Velvet

./: .clang-format  .gitmodules  CMakeLists.txt
Sandbox/Source/: Sandbox.cpp
Velvet/Diagrams/: ExtensionsAndLayers.drawio
Velvet/Include/Velvet/: Velvet.hpp
Velvet/Source/Velvet/Common/: CommonInclude.hpp  CommonTypes.hpp
Velvet/Source/Velvet/Common/Core/: Assert.hpp  Logger.hpp
Velvet/Source/Velvet/Common/Memory/: Memory.hpp
Velvet/Source/Velvet/Common/Precompiled/: CommonSTDIncludesPch.hpp
Velvet/Source/Velvet/Events/: InputEvent.hpp  WindowEvent.hpp
Velvet/Source/Velvet/Main/: Application.cpp  Application.hpp  ApplicationState.hpp  Event.cpp  Event.hpp  GlfwWindow.cpp  GlfwWindow.hpp  InputCodes.hpp  Layer.hpp  Main.cpp  Main.hpp
Velvet/Source/Velvet/Platform/Vulkan/Renderer/: VulkanRendererAPI.cpp  VulkanRendererAPI.hpp
Velvet/Source/Velvet/Renderer/: Renderer.cpp  Renderer.hpp  RendererAPI.hpp
